--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,225 @@
-pytest~=8.3.5
-beautifulsoup4~=4.13.3
-soupsieve~=2.6
-packaging~=24.2
-h11~=0.14.0
-ipython~=8.18.1
-numpy~=1.26.4
-future~=0.18.2
-pillow~=11.1.0
-pip~=21.2.4
-attrs~=25.3.0
-distro~=1.9.0
-wheel~=0.37.0
-parso~=0.8.4
-jedi~=0.19.2
-pyobjc-core~=11.0
-requests~=2.32.3
-PyYAML~=6.0.2
-idna~=3.10
-multidict~=6.2.0
-propcache~=0.3.0
-exceptiongroup~=1.2.2
-sniffio~=1.3.1
-click~=8.1.8
-pygments~=2.19.1
-httpcore~=1.0.7
-httpx~=0.28.1
-zstandard~=0.23.0
-jiter~=0.9.0
-mysql-connector-python~=9.2.0
-setuptools~=58.0.4
-charset-normalizer~=3.4.1
-regex~=2024.11.6
-pyobjc-framework-Cocoa~=11.0
-openai~=1.68.2
-pydantic~=2.10.6
-anyio~=4.9.0
-orjson~=3.10.16
-psutil~=7.0.0
-pyobjc-framework-Quartz~=11.0
-syrupy~=4.9.1
-wcwidth~=0.2.13
-pluggy~=1.5.0
-iniconfig~=2.1.0
-pexpect~=4.9.0
-yarl~=1.18.3
-async-timeout~=4.0.3
-aiohttp~=3.10.11
-aiosignal~=1.3.2
-frozenlist~=1.5.0
-aiohappyeyeballs~=2.6.1
-certifi~=2025.1.31
-fastapi~=0.115.12
-starlette~=0.46.1
-traitlets~=5.14.3
-stack-data~=0.6.3
-decorator~=5.2.1
-matplotlib-inline~=0.1.7
-prompt-toolkit~=3.0.50
-ptyprocess~=0.7.0
-tornado~=6.4.2
-urllib3~=2.3.0
-uvicorn~=0.34.0
-six~=1.15.0
-python-dateutil~=2.9.0.post0
-greenlet~=3.1.1
-pinecone~=5.4.2
-pinecone-client~=6.0.0
-tqdm~=4.67.1
-annotated-types~=0.7.0
-tenacity~=9.0.0
-tiktoken~=0.9.0
-asttokens~=3.0.0
-executing~=2.2.0
-langchain-core~=0.3.48
-langchain~=0.3.21
-langsmith~=0.3.18
-langchain-text-splitters~=0.3.7
-sqlalchemy~=2.0.39
-requests-toolbelt~=1.0.0
-pure-eval~=0.2.3
-tomli~=2.2.1
-platformdirs~=4.3.7
-PyMySQL~=1.1.1
-jsonpointer~=3.0.0
-jsonpatch~=1.33
-langchain-openai~=0.3.10
-python-dotenv~=1.1.0
-pyobjc-framework-Vision~=11.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.10.11
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+distro==1.9.0
+dnspython==2.7.0
+fastapi==0.115.12
+frozenlist==1.5.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+jiter==0.9.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.21
+langchain-core==0.3.48
+langchain-openai==0.3.10
+langchain-pinecone==0.2.3
+langchain-tests==0.3.16
+langchain-text-splitters==0.3.7
+langsmith==0.3.18
+loguru==0.7.3
+multidict==6.2.0
+numpy==1.26.4
+openai==1.68.2
+orjson==3.10.16
+packaging==24.2
+pillow==11.1.0
+pinecone==5.4.2
+pinecone-client==2.2.4
+pinecone-plugin-inference==3.1.0
+pinecone-plugin-interface==0.0.7
+pluggy==1.5.0
+propcache==0.3.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+PyMySQL==1.1.1
+pyobjc==11.0
+pyobjc-core==11.0
+pyobjc-framework-Accessibility==11.0
+pyobjc-framework-Accounts==11.0
+pyobjc-framework-AddressBook==11.0
+pyobjc-framework-AdServices==11.0
+pyobjc-framework-AdSupport==11.0
+pyobjc-framework-AppleScriptKit==11.0
+pyobjc-framework-AppleScriptObjC==11.0
+pyobjc-framework-ApplicationServices==11.0
+pyobjc-framework-AppTrackingTransparency==11.0
+pyobjc-framework-AudioVideoBridging==11.0
+pyobjc-framework-AuthenticationServices==11.0
+pyobjc-framework-AutomaticAssessmentConfiguration==11.0
+pyobjc-framework-Automator==11.0
+pyobjc-framework-AVFoundation==11.0
+pyobjc-framework-AVKit==11.0
+pyobjc-framework-AVRouting==11.0
+pyobjc-framework-BackgroundAssets==11.0
+pyobjc-framework-BrowserEngineKit==11.0
+pyobjc-framework-BusinessChat==11.0
+pyobjc-framework-CalendarStore==11.0
+pyobjc-framework-CallKit==11.0
+pyobjc-framework-Carbon==11.0
+pyobjc-framework-CFNetwork==11.0
+pyobjc-framework-Cinematic==11.0
+pyobjc-framework-ClassKit==11.0
+pyobjc-framework-CloudKit==11.0
+pyobjc-framework-Cocoa==11.0
+pyobjc-framework-Collaboration==11.0
+pyobjc-framework-ColorSync==11.0
+pyobjc-framework-Contacts==11.0
+pyobjc-framework-ContactsUI==11.0
+pyobjc-framework-CoreAudio==11.0
+pyobjc-framework-CoreAudioKit==11.0
+pyobjc-framework-CoreBluetooth==11.0
+pyobjc-framework-CoreData==11.0
+pyobjc-framework-CoreHaptics==11.0
+pyobjc-framework-CoreLocation==11.0
+pyobjc-framework-CoreMedia==11.0
+pyobjc-framework-CoreMediaIO==11.0
+pyobjc-framework-CoreMIDI==11.0
+pyobjc-framework-CoreML==11.0
+pyobjc-framework-CoreMotion==11.0
+pyobjc-framework-CoreServices==11.0
+pyobjc-framework-CoreSpotlight==11.0
+pyobjc-framework-CoreText==11.0
+pyobjc-framework-CoreWLAN==11.0
+pyobjc-framework-CryptoTokenKit==11.0
+pyobjc-framework-DataDetection==11.0
+pyobjc-framework-DeviceCheck==11.0
+pyobjc-framework-DeviceDiscoveryExtension==11.0
+pyobjc-framework-DictionaryServices==11.0
+pyobjc-framework-DiscRecording==11.0
+pyobjc-framework-DiscRecordingUI==11.0
+pyobjc-framework-DiskArbitration==11.0
+pyobjc-framework-DVDPlayback==11.0
+pyobjc-framework-EventKit==11.0
+pyobjc-framework-ExceptionHandling==11.0
+pyobjc-framework-ExecutionPolicy==11.0
+pyobjc-framework-ExtensionKit==11.0
+pyobjc-framework-ExternalAccessory==11.0
+pyobjc-framework-FileProvider==11.0
+pyobjc-framework-FileProviderUI==11.0
+pyobjc-framework-FinderSync==11.0
+pyobjc-framework-FSEvents==11.0
+pyobjc-framework-GameCenter==11.0
+pyobjc-framework-GameController==11.0
+pyobjc-framework-GameKit==11.0
+pyobjc-framework-GameplayKit==11.0
+pyobjc-framework-HealthKit==11.0
+pyobjc-framework-ImageCaptureCore==11.0
+pyobjc-framework-InputMethodKit==11.0
+pyobjc-framework-InstallerPlugins==11.0
+pyobjc-framework-InstantMessage==11.0
+pyobjc-framework-Intents==11.0
+pyobjc-framework-IntentsUI==11.0
+pyobjc-framework-IOBluetooth==11.0
+pyobjc-framework-IOBluetoothUI==11.0
+pyobjc-framework-IOSurface==11.0
+pyobjc-framework-iTunesLibrary==11.0
+pyobjc-framework-KernelManagement==11.0
+pyobjc-framework-LatentSemanticMapping==11.0
+pyobjc-framework-LaunchServices==11.0
+pyobjc-framework-libdispatch==11.0
+pyobjc-framework-libxpc==11.0
+pyobjc-framework-LinkPresentation==11.0
+pyobjc-framework-LocalAuthentication==11.0
+pyobjc-framework-LocalAuthenticationEmbeddedUI==11.0
+pyobjc-framework-MailKit==11.0
+pyobjc-framework-MapKit==11.0
+pyobjc-framework-MediaAccessibility==11.0
+pyobjc-framework-MediaExtension==11.0
+pyobjc-framework-MediaLibrary==11.0
+pyobjc-framework-MediaPlayer==11.0
+pyobjc-framework-MediaToolbox==11.0
+pyobjc-framework-Metal==11.0
+pyobjc-framework-MetalFX==11.0
+pyobjc-framework-MetalKit==11.0
+pyobjc-framework-MetalPerformanceShaders==11.0
+pyobjc-framework-MetalPerformanceShadersGraph==11.0
+pyobjc-framework-MetricKit==11.0
+pyobjc-framework-MLCompute==11.0
+pyobjc-framework-ModelIO==11.0
+pyobjc-framework-MultipeerConnectivity==11.0
+pyobjc-framework-NaturalLanguage==11.0
+pyobjc-framework-NetFS==11.0
+pyobjc-framework-Network==11.0
+pyobjc-framework-NetworkExtension==11.0
+pyobjc-framework-NotificationCenter==11.0
+pyobjc-framework-OpenDirectory==11.0
+pyobjc-framework-OSAKit==11.0
+pyobjc-framework-OSLog==11.0
+pyobjc-framework-PassKit==11.0
+pyobjc-framework-PencilKit==11.0
+pyobjc-framework-PHASE==11.0
+pyobjc-framework-Photos==11.0
+pyobjc-framework-PhotosUI==11.0
+pyobjc-framework-PreferencePanes==11.0
+pyobjc-framework-PushKit==11.0
+pyobjc-framework-Quartz==11.0
+pyobjc-framework-QuickLookThumbnailing==11.0
+pyobjc-framework-ReplayKit==11.0
+pyobjc-framework-SafariServices==11.0
+pyobjc-framework-SafetyKit==11.0
+pyobjc-framework-SceneKit==11.0
+pyobjc-framework-ScreenCaptureKit==11.0
+pyobjc-framework-ScreenSaver==11.0
+pyobjc-framework-ScreenTime==11.0
+pyobjc-framework-ScriptingBridge==11.0
+pyobjc-framework-SearchKit==11.0
+pyobjc-framework-Security==11.0
+pyobjc-framework-SecurityFoundation==11.0
+pyobjc-framework-SecurityInterface==11.0
+pyobjc-framework-SensitiveContentAnalysis==11.0
+pyobjc-framework-ServiceManagement==11.0
+pyobjc-framework-SharedWithYou==11.0
+pyobjc-framework-SharedWithYouCore==11.0
+pyobjc-framework-ShazamKit==11.0
+pyobjc-framework-Social==11.0
+pyobjc-framework-SoundAnalysis==11.0
+pyobjc-framework-Speech==11.0
+pyobjc-framework-SpriteKit==11.0
+pyobjc-framework-StoreKit==11.0
+pyobjc-framework-Symbols==11.0
+pyobjc-framework-SyncServices==11.0
+pyobjc-framework-SystemConfiguration==11.0
+pyobjc-framework-SystemExtensions==11.0
+pyobjc-framework-ThreadNetwork==11.0
+pyobjc-framework-UniformTypeIdentifiers==11.0
+pyobjc-framework-UserNotifications==11.0
+pyobjc-framework-UserNotificationsUI==11.0
+pyobjc-framework-VideoSubscriberAccount==11.0
+pyobjc-framework-VideoToolbox==11.0
+pyobjc-framework-Virtualization==11.0
+pyobjc-framework-Vision==11.0
+pyobjc-framework-WebKit==11.0
+pytest==8.3.5
+pytest-asyncio==0.26.0
+pytest-socket==0.7.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.39
+starlette==0.46.1
+syrupy==4.9.1
+tenacity==9.0.0
+tiktoken==0.9.0
+tqdm==4.67.1
+typing_extensions==4.13.0
+urllib3==2.3.0
+uvicorn==0.22.0
+yarl==1.18.3
+zstandard==0.23.0
