--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# 가상환경 무시
+venv/
+
+# 환경 변수 파일 무시
 .env
+
+# __pycache__ 등 파이썬 캐시 무시
+__pycache__/
+
+# IDE 설정 파일 무시 (PyCharm, VSCode 등)
+.idea/
+.vscode/
