--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.10.11
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==4.0.3
 attrs==25.3.0
 beautifulsoup4==4.13.3
 certifi==2025.1.31
@@ -10,6 +11,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 distro==1.9.0
 dnspython==2.7.0
+exceptiongroup==1.2.2
 fastapi==0.115.12
 frozenlist==1.5.0
 h11==0.14.0
@@ -42,7 +44,7 @@ pluggy==1.5.0
 propcache==0.3.1
 pydantic==2.10.6
 pydantic_core==2.27.2
-PyMySQL==1.1.1
+PyMySQL==1.1.0
 pyobjc==11.0
 pyobjc-core==11.0
 pyobjc-framework-Accessibility==11.0
@@ -217,6 +219,7 @@ starlette==0.46.1
 syrupy==4.9.1
 tenacity==9.0.0
 tiktoken==0.9.0
+tomli==2.2.1
 tqdm==4.67.1
 typing_extensions==4.13.0
 urllib3==2.3.0
